fix: production-ready config - env vars, CORS, Vercel/Railway deploy files